<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HeroApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TestStr">TestStr</string>
    <string name="Yeah">Yeah!</string>
    <string name="btn1">按钮一</string>
    <string name="btn2">按钮二</string>
    <string name="btn3">按钮三</string>
    <string name="btn4">按钮四</string>
    <string name="btn5">按钮五</string>
    <string name="btn6">按钮六</string>
    <string name="btn7">按钮七</string>
    <string name="btn8">按钮八</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="imageBrowser">图片浏览器</string>
	<string name="imageBrowserId">imgBrowser</string>
	<string name="toastBtnTip">提示</string>
	<string name="hintText">请输入文本内容</string>
	<string name="isAgree">偶同意</string>
	<string name="radioBoy">男生</string>
	<string name="radioGirl">女生</string>
	<string name="submitBtnTip">确定</string>
	<string name="sendBtnTip">发送</string>
	<string name="resetBtnTip">重置</string>
	<string name="changeActivity1">这是第一个Activity</string>
	<string name="changeActivity2">这是第二个Activity</string>
	<string name="minDate">03/18/2015</string>
	<string name="maxDate">12/31/2020</string>
	<string name="addBtn">添加</string>
	<string name="delBtn">删除</string>
	<string name="toSearch">搜索</string>
	<string name="sdCardPath">系统SDCard路径：\n</string>
	<string name="pathError">系统路径无效！\n</string>
	<string name="noFound">找不到相关信息！</string>
	<string name="saveBtn">保存</string>
	<string name="cancelBtn">取消</string>
	<string name="openBtn">打开</string>
	<string name="clearBtn">清空</string>
	<string name="inputUsername">用户名</string>
	<string name="inputPassword">密码</string>
	<string name="loginBtn">登录</string>
	<string name="backBtn">返回</string>
	<string name="exitBtn">退出</string>
	<string name="hisBtn">&lt;</string>
	<string name="forwardBtn">&gt;</string>
</resources>
