<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="bottom|center_horizontal"
    android:id="@+id/linearRoot">
    
	<Button
	    android:id="@+id/btn1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn1"></Button>
	<Button
	    android:id="@+id/btn2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn2"></Button>
	<Button
	    android:id="@+id/btn3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn3"></Button>
	<Button
	    android:id="@+id/btn4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn4"></Button>
	<Button
	    android:id="@+id/btn5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn5"></Button>
	<Button
	    android:id="@+id/btn6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn6"></Button>
	<Button
	    android:id="@+id/btn7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btn7"></Button>
</LinearLayout>
