<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/upc_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputUsername">
        
    </EditText>
    
    <EditText
        android:id="@+id/upc_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPassword"
        android:inputType="textPassword">
    </EditText>
	
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn">
    </Button>
</LinearLayout>
