<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RadioGroup 
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBoy">
        </RadioButton>
        <RadioButton
            android:id="@+id/radioGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioGirl">
        </RadioButton>
    </RadioGroup>
    
    <LinearLayout
        android:id="@+id/radio_btn_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitBtnTip">
        </Button>
        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetBtnTip">
        </Button>
    </LinearLayout>
</LinearLayout>
